
package rti;

message RequestProductCodes
	{
	required int32  template_id     = 154467;  // Template ID = 111
	repeated string user_msg        = 132760;  // User message for tracking
	optional string exchange        = 110101;  // Exchange filter (optional)
	}
